@@ -1,3 +1,8 @@
+Mon Sep 12 12:55:58 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * ACE-INSTALL.html:
+          Made some minor modification to the Android section.
+
 Mon Sep 12 11:16:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-android.h:
